# PicoAPRS-RTOS-Firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CubeMX/: .mxproject  CubeMX.ioc  STM32U083xx_FLASH.ld  STM32U083xx_RAM.ld
CubeMX/Inc/: app_azure_rtos.h  app_azure_rtos_config.h  app_threadx.h  main.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h
CubeMX/Src/: app_threadx.c  gpio.c  i2c.c  main.c  spi.c  stm32u0xx_hal_timebase_tim.c  stm32u0xx_it.c  tim.c  usart.c
CubeMX/cmake/: gcc-arm-none-eabi.cmake
CubeMX/cmake/stm32cubemx/: CMakeLists.txt
apps/gps_demo_app/: CMakeLists.txt  app.c  gps_demo.c  gps_demo.h
apps/uart_echo_app/: CMakeLists.txt  uart_echo_app.c  weak_functions.h
libs/gps/: CMakeLists.txt
libs/gps/Inc/driver/: gps_types.h  max_m10s.h
libs/gps/Inc/protocols/ubx/: ubx.h  ubx_defs.h  ubx_messages.h  ubx_types.h
libs/gps/Src/driver/: max_m10s.c
libs/gps/Src/protocols/ubx/: ubx.c
tests/gps_simple_test/: CMakeLists.txt  test_gps.c
tests/si_write_and_read_configs_test/: CMakeLists.txt  test_si_configs.c
tests/si_write_and_read_test/: CMakeLists.txt  test_si_read_write.c
